--- a/main.css
+++ b/main.css
@@ -4,11 +4,27 @@
 }
 
 .box {
+	background-color: #303030;
+	margin-left: 5%;
+	margin-bottom: 20px;
 	width: 40%;
 	border: 4px solid #303030;
 	border-radius: 25px;
 	padding: 10px;
 	display: inline-block;
+}
+
+@media (orientation: portrait){
+.box {
+	background-color: #303030;
+	margin-left: 5%;
+	margin-bottom: 20px;
+	width: 80%;
+	border: 4px solid #303030;
+	border-radius: 25px;
+	padding: 10px;
+	display: inline-block;
+	}
 }
 
 body {
@@ -31,6 +47,34 @@ hr.footerline {
 	width: 40px;
 	height: auto;
 	padding: 4px;
+}
+
+.project-image {
+	width: 99.5%;
+	border: 2px solid white;
+	border-radius: 16px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.button {
+	color: white;
+	background-color: #303030;
+	margin-left: 5%;
+	padding: 10px 15px;
+	border: 2px solid #303030;
+	border-radius: 20px;
+	display:inline-block;
+}
+
+.button:hover {
+	transform: translateY(-4px);
+	box-shadow: 4px 10px 4px black;
+}
+
+.p-align {
+	margin-left: 5%;
 }
 
 footer a:link, footer a:visited, footer a:hover, footer a:active {
