--- a/main.css
+++ b/main.css
@@ -113,6 +113,13 @@ hr.footerline {
 		padding: 10px 20px;
 		border-radius: 35px;
 	}
+	
+	.button-2 {
+		font-size: 4vw;
+		padding: 10px 20px;
+		border-radius: 35px;
+	}
+	
 	.p-align {
 		font-size: 4vw;
 	}
