--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@
 @media (orientation: portrait) {
 .box {
 	background-color: #303030;
-	margin-left: 5%;
+	margin-left: 10%;
 	margin-bottom: 20px;
 	width: 80%;
 	border: 4px solid #303030;
@@ -34,7 +34,7 @@
 }
 
 .body {
-	background-color: black;
+	background-color: #261f3e;
 	background-image: url("assets/images/background-main.jpg");
 	background-size: 100%, auto;
 	background-repeat: no-repeat;
@@ -45,10 +45,24 @@
 	background-image: url("assets/images/blue.jpg");
 }
 
-@media (orientation: portrait) {
-.body {
-	background-image: url("assets/images/background-vertical.jpg"); 
-	}
+.big-box {
+	background-color: #303030;
+	margin-left: 25%;
+	margin-bottom: 20px;
+	width: 50%;
+	border: 4px solid #303030;
+	border-radius: 25px;
+	padding: 10px;
+	display: inline-block;
+}
+
+.big-image {
+	width: 99.5%;
+	border: 2px solid white;
+	border-radius: 16px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 hr.footerline {
@@ -129,22 +143,41 @@ hr.footerline {
 	.p-align {
 		font-size: 4vw;
 	}
+	
 	.h-size {
 		font-size: 7vw;
 	}
+	
 	.box-title {
 		font-size: 5vw;
 		text-align: center;
 		margin-top: -0.2em;
 		margin-bottom: -0.2em;
 	}
+	
 	.box-text {
 		font-size: 4vw;
 	}
+	
 	.img {
 		width: 8vw;
 		height: auto;
 		padding: 0.5vw;
+	}
+	
+	.body {
+		background-image: url("assets/images/background-vertical.jpg"); 
+	}
+	
+	.big-box {
+		background-color: #303030;
+		margin-left: 10%;
+		margin-bottom: 20px;
+		width: 80%;
+		border: 4px solid #303030;
+		border-radius: 25px;
+		padding: 10px;
+		display: inline-block;
 	}
 }
 
